css changes - td content overflowing issue fixed

--- a/themes/ink/static/scss/style.scss
+++ b/themes/ink/static/scss/style.scss
@@ -244,7 +244,13 @@ body {
     }
     td {
       vertical-align: top;
-      word-break: break-word;
+    }
+  }
+  table{
+    tr{
+      td{
+        word-break: break-word;
+      }
     }
   }
   .inner-table {
